Feat: 홍보 게시판 리스트 컴포넌트 작성 및 라우터 추가

--- a/src/components/board/BoardHeader.scss
+++ b/src/components/board/BoardHeader.scss
@@ -3,17 +3,21 @@
   h2 {
     margin: 0;
     padding: 10px;
+    font-size: 48px;
+    font-weight: bold;
   }
   .flex-box {
     display: flex;
     justify-content: space-between;
     padding: 10px;
+
     p {
       margin: 0;
-      font-size: small;
+      font-size: 18px;
     }
     Button {
-      height: 30px;
+      height: 45px;
+      width: 115px;
       text-align: center;
       line-height: 30px;
       font-weight: 600;
