--- a/src/components/board/BoardNav.scss
+++ b/src/components/board/BoardNav.scss
@@ -2,11 +2,15 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  box-sizing: border-box;
   .point {
     color: #ffb400;
   }
   span {
     font-weight: 600;
-    font-size: small;
+    font-size: 16px;
+  }
+  .refresh {
+    cursor: pointer;
   }
 }
