--- a/src/components/free-board-list/FreeBoardList.scss
+++ b/src/components/free-board-list/FreeBoardList.scss
@@ -1,7 +1,7 @@
 .free-board-list-box {
   display: flex;
   flex-direction: column;
-  margin: 0 6px;
+  margin: 0 3%;
   border-top: #bcbcbc solid 1px;
   .content-box {
     display: flex;
@@ -27,9 +27,9 @@
       }
     }
     .title {
-      font-size: 1rem;
-      font-weight: 600;
-      padding-bottom: 10px;
+      font-size: 22px;
+      font-weight: 500;
+      padding-bottom: 6px;
     }
     .bottom {
       .content {
@@ -46,6 +46,7 @@
       .coments {
         font-size: small;
         display: flex;
+        align-items: center;
         margin-top: auto;
         span {
           margin-left: 4px;
