--- a/src/pages/free-board-list/FreeBoardListPage.scss
+++ b/src/pages/free-board-list/FreeBoardListPage.scss
@@ -1,6 +1,10 @@
 .free-board-page {
   margin: 0 auto;
   max-width: 820px;
+  .nav-box {
+    margin: 0 3%;
+    margin-top: 20px;
+  }
 }
 
 .pagination {
