Feat: 자유게시판 디테일 페이지 작성

--- a/src/components/free-board-list/FreeBoardList.scss
+++ b/src/components/free-board-list/FreeBoardList.scss
@@ -43,7 +43,7 @@
         overflow: hidden;
         // text-overflow: ellipsis;
       }
-      .coments {
+      .comments {
         font-size: small;
         display: flex;
         align-items: center;
