--- a/src/components/pr-board-list/PRBoardList.scss
+++ b/src/components/pr-board-list/PRBoardList.scss
@@ -47,7 +47,7 @@
         font-weight: 600;
       }
 
-      .coments {
+      .comments {
         font-size: small;
         display: flex;
         align-items: center;
