--- a/src/pages/free-board-detail/FreeBoardDetailPage.scss
+++ b/src/pages/free-board-detail/FreeBoardDetailPage.scss
@@ -1,15 +1,12 @@
-.free-board-page {
+.free-board-detail {
   font-family: "Noto Sans KR";
   margin: 0 auto;
   max-width: 820px;
 
   .nav-box {
-    margin: 0 3%;
     margin-top: 20px;
+    * {
+      font-weight: 500;
+    }
   }
-}
-
-.pagination {
-  width: fit-content;
-  margin: 20px auto;
 }
