Feat: 자유게시판 공유버튼 alert 추가

--- a/src/components/free-board-detail/FreeBoardPost.scss
+++ b/src/components/free-board-detail/FreeBoardPost.scss
@@ -1,6 +1,6 @@
 .free-board-post {
   background-color: #fff;
-  padding: 40px 50px;
+  padding: 40px;
   border-radius: 40px;
   display: flex;
   flex-direction: column;
@@ -27,6 +27,9 @@
       font-size: 18px;
       .share-icon {
         margin-right: 14px;
+      }
+      .comments-icon {
+        display: flex;
       }
       span {
         line-height: 20px;
