Feat: 자유게시판, 홍보게시판 게시글 작성 폼 추가

--- a/src/pages/free-board/FreeBoardFormPage.scss
+++ b/src/pages/free-board/FreeBoardFormPage.scss
@@ -1,16 +1,9 @@
-.pr-board-detail-page {
+.free-board-form-page {
   font-family: "Noto Sans KR";
   margin: 0 auto;
   max-width: 840px;
 
   .body {
     padding: 0 20px;
-  }
-
-  .nav-box {
-    margin-top: 40px;
-    * {
-      font-weight: 500;
-    }
   }
 }
