--- a/src/components/board/BoardNav.scss
+++ b/src/components/board/BoardNav.scss
@@ -1,7 +1,7 @@
 .nav-box {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 10px 0 10px 10px;
   box-sizing: border-box;
   .point {
     color: #ffb400;
