--- a/src/pages/free-board/FreeBoardDetailPage.scss
+++ b/src/pages/free-board/FreeBoardDetailPage.scss
@@ -1,10 +1,14 @@
 .free-board-detail {
   font-family: "Noto Sans KR";
   margin: 0 auto;
-  max-width: 820px;
+  max-width: 840px;
+
+  .body {
+    padding: 0 20px;
+  }
 
   .nav-box {
-    margin-top: 20px;
+    margin-top: 40px;
     * {
       font-weight: 500;
     }
