Feat: 홍보게시판 이벤트 추가

--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -1,18 +1,21 @@
 .pr-board-list-box {
-  margin: 30px 16px;
+  margin: 40px 16px;
   display: flex;
   justify-content: space-between;
 
   > * {
     flex: 0 0 47%;
+    height: fit-content;
   }
 
   .content-box {
+    position: relative;
+    top: 0;
     box-sizing: border-box;
     height: fit-content;
     width: 100%;
 
-    margin-bottom: 70px;
+    margin: 8px 0 70px 0;
     display: flex;
     flex-direction: column;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 25%);
@@ -29,10 +32,10 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 16px 28px;
+      padding: 30px 26px 18px 26px;
 
       > * {
-        margin-bottom: 12px;
+        margin-bottom: 14px;
       }
 
       .flex-box {
@@ -43,16 +46,25 @@
 
       .title {
         font-size: 24px;
-        padding-bottom: 4px;
+        padding-bottom: 8px;
         font-weight: 600;
+
+        display: -webkit-box;
+        white-space: normal;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
       }
 
       .comments {
-        font-size: small;
+        margin: 8px 0 0 10px;
+        font-size: 16px;
         display: flex;
-        align-items: center;
+        align-self: flex-start;
+        align-items: flex-start;
         span {
           margin-left: 4px;
+          line-height: 16px;
         }
       }
 
@@ -86,5 +98,11 @@
         overflow: hidden;
       }
     }
+  }
+
+  .content-box:hover {
+    top: -6px;
+    // box-shadow: 2px 4px 11px #858585;
+    transition: all 300ms;
   }
 }
