--- a/src/components/board/BoardHeader.scss
+++ b/src/components/board/BoardHeader.scss
@@ -1,5 +1,10 @@
 .board-list-header {
   width: 100%;
+
+  .content {
+    padding: 0 10px;
+  }
+
   h2 {
     margin: 0;
     padding: 10px;
@@ -26,8 +31,8 @@
   }
   hr {
     border: 0;
-    height: 2px;
-    background-color: black;
+    height: 3px;
+    background-color: rgb(100, 100, 100);
   }
 }
 
@@ -35,6 +40,11 @@
   display: flex;
   align-items: center;
   margin: 38px 0;
+
+  .click-box {
+    display: flex;
+    align-items: center;
+  }
 
   .header-title {
     margin: 0 8px 0 4px;
