--- a/src/components/board/BoardNav.scss
+++ b/src/components/board/BoardNav.scss
@@ -10,7 +10,8 @@
     font-weight: 600;
     font-size: 16px;
   }
-  .refresh {
-    cursor: pointer;
+  .refresh:hover {
+    transition: all 300ms;
+    transform: rotate(-80deg);
   }
 }
