--- a/src/components/play-detail/PlayDetailNav.scss
+++ b/src/components/play-detail/PlayDetailNav.scss
@@ -1,3 +1,8 @@
+.selected-play-detail-menu {
+  color: #ffb400;
+  border-bottom: 2px solid #ffb400;
+}
+
 @media (min-width: 480px) {
   .play-detail-nav {
     display: flex;
@@ -13,11 +18,6 @@
 
   .play-detail-nav div:hover {
     cursor: pointer;
-  }
-
-  .play-detail-nav .detail-info {
-    color: #ffb400;
-    border-bottom: 2px solid #ffb400;
   }
 }
 
