--- a/src/components/play-list/PlayBox.scss
+++ b/src/components/play-list/PlayBox.scss
@@ -25,7 +25,7 @@
     border-radius: 8px;
   }
 
-  .title {
+  .play-title {
     margin: 20px 0 10px 0;
     font-size: 22px;
     font-weight: 700;
@@ -34,7 +34,7 @@
     flex-wrap: wrap;
   }
 
-  .place {
+  .play-place {
     margin: 5px 0;
     font-weight: 700;
     width: 250px;
@@ -42,14 +42,14 @@
     flex-wrap: wrap;
   }
 
-  .period {
+  .play-period {
     margin: 5px 0;
     width: 250px;
     display: flex;
     flex-wrap: wrap;
   }
 
-  .price {
+  .play-price {
     margin: 5px 0;
     font-size: 22px;
     font-weight: 700;
@@ -86,7 +86,7 @@
     border-radius: 8px;
   }
 
-  .title {
+  .play-title {
     margin: 20px 0 10px 0;
     font-size: 20px;
     font-weight: 700;
@@ -95,7 +95,7 @@
     flex-wrap: wrap;
   }
 
-  .place {
+  .play-place {
     font-size: 16px;
     margin: 5px 0;
     font-weight: 700;
@@ -104,7 +104,7 @@
     flex-wrap: wrap;
   }
 
-  .period {
+  .play-period {
     font-size: 16px;
     margin: 5px 0;
     width: 150px;
@@ -112,7 +112,7 @@
     flex-wrap: wrap;
   }
 
-  .price {
+  .play-price {
     margin: 5px 0;
     font-size: 20px;
     font-weight: 700;
