--- a/src/pages/play-list/PlayList.scss
+++ b/src/pages/play-list/PlayList.scss
@@ -4,7 +4,11 @@ body {
 
 /*(반응형) 컴퓨터 사이즈에서 적용될 CSS*/
 @media (min-width: 480px) {
-  .container {
+  play-region-select-big-container {
+    margin: 0 auto;
+  }
+
+  .play-list-container {
     display: flex;
     flex-direction: column;
     width: 1110px;
@@ -17,14 +21,22 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
   }
+
+  .play-no-exsist {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+  }
 }
 
 /*(반응형) 핸드폰 사이즈에서 적용될 CSS*/
 @media (max-width: 480px) {
-  .container {
+  .play-list-container {
     display: flex;
     flex-direction: column;
     margin: 30px auto;
+    padding: 0 15px;
     font-family: "Nanum Gothic", sans-serif;
   }
 
