FEAT: 헤더 링크들 연결

--- a/src/components/main/MainBanner.scss
+++ b/src/components/main/MainBanner.scss
@@ -10,10 +10,7 @@
     background-color: #797979;
   }
 }
-img {
+.banner-img {
   width: 100%;
   height: 100%;
-}
-.swiper-pagination {
-  margin: 0px;
 }
