--- a/src/components/main/MainPreferredRegion.scss
+++ b/src/components/main/MainPreferredRegion.scss
@@ -1,13 +1,12 @@
 .main-region-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    height: 350px;
-    width: 1110px;
-  }
-  h1 {
-      color: white;
-      margin-bottom: 10px;
-      font-size: 27px;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 350px;
+  width: 1110px;
+}
+.main-title {
+  color: white;
+  margin-bottom: 10px;
+  font-size: 27px;
+}
