--- a/src/components/common/header/Header.scss
+++ b/src/components/common/header/Header.scss
@@ -38,9 +38,9 @@
     font-family: 'Baloo Bhaina 2', sans-serif;
 }
 .logo {
-    height: 135px;
-    width: 440px;
-    margin-right: 50px;
+    height: 130px;
+    width: 460px;
+    margin-right: 30px;
 }
 .vertical-box3 {
     display: flex;
@@ -62,6 +62,7 @@ h1 {
     border-radius: 15px;
     padding-left: 20px;
     font-size: 18px;
+    color: #2f2f2f;
     width: 300px;
     height: 35px;
 }
