--- a/src/components/main/MainChild.scss
+++ b/src/components/main/MainChild.scss
@@ -5,7 +5,7 @@
     height: 350px;
     width: 1110px;
   }
-  h1 {
+  .main-title {
       color: white;
       margin-bottom: 10px;
       font-size: 27px;
