--- a/src/pages/play-list/PlayList.scss
+++ b/src/pages/play-list/PlayList.scss
@@ -19,7 +19,7 @@ body {
   .play-list-main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    // justify-content: space-between;
   }
 
   .play-no-exsist {
