--- a/src/components/play-list/RegionSelectBar.scss
+++ b/src/components/play-list/RegionSelectBar.scss
@@ -3,16 +3,12 @@
   border-bottom: 2px solid #ffb400;
 }
 
-.play-calendar-selected-design {
-  color: #ffb400;
-}
-
 @media (min-width: 480px) {
   .play-region-select-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 80px 80px;
+    padding-bottom: 80px;
     margin: 0 auto;
 
     .play-region-select {
@@ -36,6 +32,8 @@
       font-size: 20px;
       font-weight: 700;
       cursor: pointer;
+      position: relative;
+      top: 65px;
 
       svg {
         padding-right: 8px;
