--- a/src/pages/play-detail/PlayDetail.scss
+++ b/src/pages/play-detail/PlayDetail.scss
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 1110px;
-    margin: 30px auto;
+    margin: 50px auto;
     font-family: "Nanum Gothic", sans-serif;
   }
 
@@ -17,6 +17,7 @@ body {
     border: 1.5px solid rgba(188, 188, 188, 0.5);
     padding: 0 20px 0;
     margin-top: 30px;
+    background-color: #fff;
   }
 }
 
