--- a/src/components/common/button/UpButton.scss
+++ b/src/components/common/button/UpButton.scss
@@ -3,7 +3,8 @@
   border-radius: 50px;
   padding: 4px;
   position: fixed;
-  bottom: 40px;
-  right: 40px;
+  bottom: 30px;
+  right: 30px;
   cursor: pointer;
+  font-size: 32px;
 }
