--- a/src/pages/pr-board/PRBoardFormPage.scss
+++ b/src/pages/pr-board/PRBoardFormPage.scss
@@ -1,9 +1,9 @@
 .pr-board-form-page {
   font-family: "Noto Sans KR";
-  margin: 0 auto;
+  width: 100%;
   max-width: 840px;
 
   .body {
-    padding: 0 20px;
+    padding: 0 10px;
   }
 }
