--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 100vh;
+}
+
+.page-margin {
+  margin: 40px auto;
+}
+
+.page-margin-bottom {
+  margin: 0 auto;
+  margin-bottom: 60px;
 }
