--- a/src/components/main/MainReview.scss
+++ b/src/components/main/MainReview.scss
@@ -1,6 +1,6 @@
 .main-review-container {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     width: 1110px;
 }
 .review-box {
