FEAT: 관리자페이지 네브바 구현

--- a/src/components/common/header/Header.scss
+++ b/src/components/common/header/Header.scss
@@ -14,7 +14,7 @@
 }   
 .vertical-box1 {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     height: 25px;
     background-color: #282828;
     color: white;
