--- a/src/components/main/PublicitySlide.scss
+++ b/src/components/main/PublicitySlide.scss
@@ -14,6 +14,7 @@
 }
 .publicity-Swiper {
   height: 400px;
+  border-radius: 5px;
   background-color: #282828;
   border-top: 1px solid black;
   .swiper-button-prev,
