--- a/src/components/main/MainPlayBox.scss
+++ b/src/components/main/MainPlayBox.scss
@@ -15,6 +15,8 @@
     border-radius: 10px;
     overflow: hidden;
     img {
+      width: 100%;
+      height: 100%;
       transition: transform 0.3s ease-in-out;
   
       &:hover {
