--- a/src/components/play-list/PlayListHeader.scss
+++ b/src/components/play-list/PlayListHeader.scss
@@ -1,28 +1,55 @@
 /*(반응형) 컴퓨터 사이즈에서 적용될 CSS*/
-@media (min-width: 480px) {
+@media (min-width: 1130px) {
   .play-list-header {
     display: flex;
     justify-content: space-between;
     margin-top: 80px;
-  }
 
-  .play-list-header .number-of-plays {
-    font-weight: 700;
-    font-size: 28px;
-  }
+    .number-of-plays {
+      font-weight: 700;
+      font-size: 28px;
 
-  .play-list-header .number-of-plays span {
-    color: #ffb400;
-  }
+      span {
+        color: #ffb400;
+      }
+    }
 
-  .play-list-header .sort-by {
-    width: 120px;
-    height: 40px;
-    font-size: 16px;
-    font-family: "Nanum Gothic", sans-serif;
-    text-align: center;
-    border: 1px solid rgba(188, 188, 188, 0.7);
-    border-radius: 8px;
+    .sort-by {
+      width: 120px;
+      height: 40px;
+      font-size: 16px;
+      font-family: "Nanum Gothic", sans-serif;
+      text-align: center;
+      border: 1px solid rgba(188, 188, 188, 0.7);
+      border-radius: 8px;
+    }
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1129px) {
+  .play-list-header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+
+    .number-of-plays {
+      font-weight: 700;
+      font-size: 28px;
+
+      span {
+        color: #ffb400;
+      }
+    }
+
+    .sort-by {
+      width: 120px;
+      height: 40px;
+      font-size: 16px;
+      font-family: "Nanum Gothic", sans-serif;
+      text-align: center;
+      border: 1px solid rgba(188, 188, 188, 0.7);
+      border-radius: 8px;
+    }
   }
 }
 
@@ -32,24 +59,24 @@
     display: flex;
     justify-content: space-between;
     margin-top: 80px;
-  }
 
-  .play-list-header .number-of-plays {
-    font-weight: 700;
-    font-size: 26px;
-  }
+    .number-of-plays {
+      font-weight: 700;
+      font-size: 26px;
 
-  .play-list-header .number-of-plays span {
-    color: #ffb400;
-  }
+      span {
+        color: #ffb400;
+      }
+    }
 
-  .play-list-header .sort-by {
-    width: 120px;
-    height: 40px;
-    font-size: 16px;
-    font-family: "Nanum Gothic", sans-serif;
-    text-align: center;
-    border: 1px solid rgba(188, 188, 188, 0.7);
-    border-radius: 8px;
+    .sort-by {
+      width: 120px;
+      height: 40px;
+      font-size: 16px;
+      font-family: "Nanum Gothic", sans-serif;
+      text-align: center;
+      border: 1px solid rgba(188, 188, 188, 0.7);
+      border-radius: 8px;
+    }
   }
 }
