--- a/src/components/play-list/PaginationBox.scss
+++ b/src/components/play-list/PaginationBox.scss
@@ -1,5 +1,14 @@
 /*(반응형) 컴퓨터 사이즈에서 적용될 CSS*/
-@media (min-width: 480px) {
+@media (min-width: 1130px) {
+  .play-list-pagenation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 1130px) {
   .play-list-pagenation {
     display: flex;
     justify-content: center;
