--- a/src/pages/play-detail/PlayDetail.scss
+++ b/src/pages/play-detail/PlayDetail.scss
@@ -3,7 +3,7 @@ body {
 }
 
 /*(반응형) 컴퓨터 사이즈에서 적용될 CSS*/
-@media (min-width: 480px) {
+@media (min-width: 1130px) {
   .play-detail-container {
     display: flex;
     flex-direction: column;
@@ -19,6 +19,9 @@ body {
     margin-top: 30px;
     background-color: #fff;
   }
+}
+
+@media (min-width: 481px) and (max-width: 1129px) {
 }
 
 /*(반응형) 핸드폰 사이즈에서 적용될 CSS*/
