--- a/src/components/user/SnsButtons.scss
+++ b/src/components/user/SnsButtons.scss
@@ -1,21 +1,25 @@
 .social-buttons {
-  max-width: 280px;
+  max-width: 300px;
   margin: 30px auto 0px auto;
   box-sizing: border-box;
 
-  .social-buttons button {
-    width: 260px;
+  button {
+    width: 280px;
     margin-bottom: 20px;
     border: none;
     cursor: pointer;
     padding: 0;
-    
 
-    button img {
+
+    .btnimage {
       display: block;
-      border-radius: 10px;
+      width: 280px;
     }
-
+    
   }
+
+
+
   
 }
+
