--- a/src/components/admin/AdminNav.scss
+++ b/src/components/admin/AdminNav.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 800px;
-    width: 150px;
+    width: 160px;
     margin-top: 30px;
     margin-bottom: 30px;
     background-color: white;
@@ -63,5 +63,6 @@
 .active {
     background-color: #eee;
     color: #ffb400;
-    font-weight: 700;
+    font-weight: 900;
+    box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.1);
 }
